  * Pedro Lambert: Add support for Rake tasks defined by Maid (Closes: #68, #123)
  * Jurriaan Pruis: Add daemon mode and repeat support (Closes: #126, #131)
  * Jurriaan Pruis: Add "ignore" option support for "watch" (Closes: #132)
  * Nico Ritschel: Add "copy" tool (Closes: #72, #133)
  * Add maid introduction and links (Closes: #128)

 -- Benjamin Oakes <hello@benjaminoakes.com>  TODO

maid (0.5.0) stable; urgency=low

  * Stats! { 'collaborators' => 13, 'downloads' => 9570, 'forks' => 38,
    'open_issues' => 28, 'closed_issues' => 86, 'stars' => 722,
    'users_sharing_rules' => 25 }
  * Started official support Ruby 2.1.0 (Closes: #114)
  * Shiro Hazuki (public domain code): New utility methods: "dir_safe",
    "downloading?" (Closes: #107)

 -- Benjamin Oakes <hello@benjaminoakes.com>  Thu, 26 Dec 2013 00:00:00 +0000

maid (0.4.2) stable; urgency=low

  * Updated dependencies: "rubyzip"

 -- Benjamin Oakes <hello@benjaminoakes.com>  Fri, 1 Nov 2013 00:00:00 +0000

maid (0.4.1) stable; urgency=low

  * Updated dependencies: "mime-types"

 -- Benjamin Oakes <hello@benjaminoakes.com>  Mon, 28 Oct 2013 00:00:00 +0000

maid (0.4.0) stable; urgency=low

  * Stats!  { 'collaborators' => 12, 'downloads' => 8227, 'forks' => 40,
    'open_issues' => 29, 'closed_issues' => 83, 'stars' => 713,
    'users_sharing_rules' => 28 }
  * New utility methods: "checksum_of", "escape_glob", "files"
  * New duplicate detection methods: "dupes_in", "newest_dupes_in",
    "verbose_dupes_in"
  * New filetype methods: "media_type", "mime_type",
    "spotlight_content_types", "where_content_type"
  * Ended official support for Ruby 1.8.7 and 1.9.2 (Closes: #108)
  * Update to rubyzip 1.0.0 (Closes: #109)
  * Remove "ohai" dependency which required native extensions (Closes: #112)
  * Updated other dependencies (Closes: #111)
  * Mu Ye: Require "--force" option to cause real cleaning to take place (Closes: #78)